# ml-project

./: README.md  commands.py  config.yaml  data_module.py  infer.py  model_module.py  odk.py  pyproject.toml  resnet_model.py  train.py  utils.py
